--- a/index.html
+++ b/index.html
@@ -756,7 +756,10 @@
         </div>
     </slide>
     <slide slide-sequence-number="11" entry-animation="grow">
-        <div class="d-flex h-100 w-100 justify-content-center align-items-center "><h1 class="slide-header">Thank You!</h1></div>        
+        <div class="d-flex h-100 w-100 justify-content-center align-items-center ">
+            <h1 class="slide-header">Thank You!</h1>
+            <img src="images/talk-doc.png"/>
+        </div>        
     </slide>
 </body>
 
